--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "00cf591d-8a5b-499e-8715-1ad140867934",
    "metadata": {},
    "outputs": [],
@@ -23,15 +23,163 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Load the dataset (change the path if needed)\n",
-    "df = pd.read_csv('../data/heart.csv')"
+    "df = pd.read_csv('heart.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0bb5ea1c-a4e5-4419-bae8-661fe2d82711",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+       "0   63    1   3       145   233    1        0      150      0      2.3      0   \n",
+       "1   37    1   2       130   250    0        1      187      0      3.5      0   \n",
+       "2   41    0   1       130   204    0        0      172      0      1.4      2   \n",
+       "3   56    1   1       120   236    0        1      178      0      0.8      2   \n",
+       "4   57    0   0       120   354    0        1      163      1      0.6      2   \n",
+       "\n",
+       "   ca  thal  target  \n",
+       "0   0     1       1  \n",
+       "1   0     2       1  \n",
+       "2   0     2       1  \n",
+       "3   0     2       1  \n",
+       "4   0     2       1  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -46,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "23ad7e40-87f3-4b93-bef9-a9ddb5881ddc",
    "metadata": {},
    "outputs": [],
@@ -75,10 +223,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d39376f1-b4ca-44c0-8364-d11b9a7605f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy: 1.0\n",
+      "Test Accuracy: 0.7894736842105263\n"
+     ]
+    }
+   ],
    "source": [
     "#Create and Train a Decision Tree Classifier and print the train and test accuracy\n",
     "\n",
@@ -86,12 +243,23 @@
     "from sklearn.metrics import accuracy_score, mean_squared_error\n",
     "\n",
     "# Train Decision Tree\n",
-    "\n",
+    "Tree_model = DecisionTreeClassifier(random_state=1)\n",
+    "Tree_model.fit(X_train,y_train)\n",
     "\n",
     "# Predictions and evaluation\n",
+    "y_pred = Tree_model.predict(X_test)\n",
     "\n",
+    "# Evaluate performance\n",
+    "# Accuracy on the training set\n",
+    "train_accuracy = Tree_model.score(X_train, y_train)\n",
+    "# Accuracy on the test set\n",
+    "test_accuracy = accuracy_score(y_test, y_pred)\n",
     "\n",
-    "# Evaluate performance\n"
+    "# Print results\n",
+    "print(f\"Training Accuracy: {train_accuracy}\")\n",
+    "print(f\"Test Accuracy: {test_accuracy}\")\n",
+    "# Predictions and evaluation\n",
+    "y_pred = Tree_model.predict(X_test)"
    ]
   },
   {
@@ -135,24 +303,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "8fc76766-a90c-47ed-bd02-66827a1dc115",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy Bagging: 0.8370044052863436\n",
+      "Test Accuracy Bagging: 0.8421052631578947\n"
+     ]
+    }
+   ],
    "source": [
     "# Create and Train a BaggingClassifier. \n",
     "# Use as base estimator a weak decision tree (max_depth=1) and 100 estimators to really over a lot of different data samples\n",
     "# Print the train and test accuracy\n",
     "\n",
     "from sklearn.ensemble import BaggingClassifier\n",
-    "\n",
+    "bagging_model = BaggingClassifier(DecisionTreeClassifier(max_depth=1),\n",
+    "                                  n_estimators = 100,\n",
+    "                                 random_state = 1)\n",
     "# Train BaggingClassifier\n",
-    "\n",
+    "bagging_model.fit(X_train,y_train)\n",
     "\n",
     "# Predictions and evaluation\n",
+    "y_pred_bagging = bagging_model.predict(X_test)\n",
     "\n",
     "\n",
-    "# Evaluate performance\n"
+    "# Evaluate performance\n",
+    "# Accuracy on the training set\n",
+    "train_accuracy_bagging = bagging_model.score(X_train, y_train)\n",
+    "# Accuracy on the test set\n",
+    "test_accuracy_bagging = accuracy_score(y_test, y_pred_bagging)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Training Accuracy Bagging: {train_accuracy_bagging}\")\n",
+    "print(f\"Test Accuracy Bagging: {test_accuracy_bagging}\")"
    ]
   },
   {
@@ -165,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "9f892484-618a-46fe-8e56-0a18fa652ed8",
    "metadata": {},
    "outputs": [],
@@ -192,24 +380,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "4bba1773-b0b0-44ba-a838-58b8c466ff88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Accuracy Ada: 0.973568281938326\n",
+      "Test Accuracy Ada: 0.868421052631579\n"
+     ]
+    }
+   ],
    "source": [
     "# Create and Train a AdaBoostClassifier. \n",
     "# Use as base estimator a weak decision tree (max_depth=1) and 100 estimators to really target the specific behaviors of this phenomenon\n",
     "# Print the train and test accuracy\n",
     "\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
-    "\n",
-    "# Train AdaBoost\n",
-    "\n",
+    "Ada_model = AdaBoostClassifier(DecisionTreeClassifier(max_depth=1),\n",
+    "                                  n_estimators = 100,\n",
+    "                                 random_state = 1)\n",
+    "#Train AdaBoost\n",
+    "Ada_model.fit(X_train,y_train)\n",
     "\n",
     "# Predictions and evaluation\n",
+    "y_pred_ada = Ada_model.predict(X_test)\n",
     "\n",
     "\n",
-    "# Evaluate performance\n"
+    "# Evaluate performance\n",
+    "# Accuracy on the training set\n",
+    "train_accuracy_ada = Ada_model.score(X_train, y_train)\n",
+    "# Accuracy on the test set\n",
+    "test_accuracy_ada = accuracy_score(y_test, y_pred_ada)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Training Accuracy Ada: {train_accuracy_ada}\")\n",
+    "print(f\"Test Accuracy Ada: {test_accuracy_ada}\")"
    ]
   },
   {
@@ -249,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
